--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "type": "commonjs",
   "scripts": {
-    "test": "npx bddgen && npx playwright test",
+    "test": "npx bddgen && npx playwright test  --workers=2",
     "watch:bdd": "nodemon -w ./features -w ./steps -e feature,js,ts --exec \"npx bddgen\"",
     "watch:pw": "playwright test --ui",
     "watch": "run-p watch:*",
